--- a/_config.yml
+++ b/_config.yml
@@ -134,7 +134,7 @@ author:
       url: "https://orcid.org/0000-0001-8855-4478"
     - label: "LinkedIn"
       icon: "fab fa-linkedin"
-      url: "www.linkedin.com/in/simone-francesco-fornasari"
+      url: "https://www.linkedin.com/in/simone-francesco-fornasari"
 
 # Site Footer
 footer:
@@ -165,7 +165,7 @@ footer:
       url: "https://orcid.org/0000-0001-8855-4478"
     - label: "LinkedIn"
       icon: "fab fa-linkedin"
-      url: "www.linkedin.com/in/simone-francesco-fornasari"
+      url: "https://www.linkedin.com/in/simone-francesco-fornasari"
 
 
 # Reading Files
