--- a/_config.yml
+++ b/_config.yml
@@ -164,7 +164,7 @@ footer:
       icon: "fab fa-orcid"
       url: "https://orcid.org/0000-0001-8855-4478"
     - label: "LinkedIn"
-      icon: "fa-brands fa-linkedin"
+      icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/simone-francesco-fornasari"
 
 
