--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : K4I53CuABpbZztOMxVkVHQhzQYffzfInqxc_bacEiyA
 bing_site_verification   :
 naver_site_verification  :
 yandex_site_verification :
