--- a/_config.yml
+++ b/_config.yml
@@ -106,9 +106,9 @@ author:
   avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "PhD student in seismology at the SeiRaM group of University of Trieste."
   location         : "Trieste, Italy"
-  email            : "simonefrancesco.fornasari@phd.units.it"
+  email            : 
   links:
-    - label: "simonefrancesco.fornasari@phd.units.it"
+    - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:simonefrancesco.fornasari@phd.units.it"
     - label: "Website"
@@ -139,6 +139,9 @@ author:
 # Site Footer
 footer:
   links:
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "mailto:simonefrancesco.fornasari@phd.units.it"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url:
