Added CV and scholar profile

--- a/_config.yml
+++ b/_config.yml
@@ -129,6 +129,9 @@ author:
     - label: "SeisRaM"
       icon: "fas fa-briefcase"
       url: "https://seisram.units.it"
+    - label: "Google Scholar"
+      icon: "ai ai-google-scholar"
+      url: "https://scholar.google.com/citations?user=7x-PgKsAAAAJ"
     - label: "ORCID"
       icon: "fab fa-orcid"
       url: "https://orcid.org/0000-0001-8855-4478"
@@ -163,6 +166,9 @@ footer:
     - label: "SeisRaM"
       icon: "fas fa-briefcase"
       url: "https://seisram.units.it"
+    - label: "Google Scholar"
+      icon: "ai ai-google-scholar"
+      url: "https://scholar.google.com/citations?user=7x-PgKsAAAAJ"
     - label: "ORCID"
       icon: "fab fa-orcid"
       url: "https://orcid.org/0000-0001-8855-4478"
