--- a/_config.yml
+++ b/_config.yml
@@ -130,7 +130,7 @@ author:
       icon: "fas fa-briefcase"
       url: "https://seisram.units.it"
     - label: "Google Scholar"
-      icon: "ai ai-google-scholar"
+      icon: "fas fa-graduation-cap"
       url: "https://scholar.google.com/citations?user=7x-PgKsAAAAJ"
     - label: "ORCID"
       icon: "fab fa-orcid"
@@ -167,7 +167,7 @@ footer:
       icon: "fas fa-briefcase"
       url: "https://seisram.units.it"
     - label: "Google Scholar"
-      icon: "ai ai-google-scholar"
+      icon: "fas fa-graduation-cap"
       url: "https://scholar.google.com/citations?user=7x-PgKsAAAAJ"
     - label: "ORCID"
       icon: "fab fa-orcid"
